# coupled-drl-gnn

./: LICENSE  README.md
drl-cfd/: README.md
drl-gnn/: .gitignore  .gitmodules  README.md  graphdrltrfluide_1.sh  graphdrltrfluide_2.sh  pyproject.toml  requirements.txt
drl-gnn/environment_config/: panels.json  predict_panels.json  trajectory_panels.json
drl-gnn/environment_config/blm/: IHM.mtc  job.sh
drl-gnn/environment_config/blm/BLM/: Box1.txt  Center1.txt  Center2.txt  blm.mtc
drl-gnn/environment_config/blm/Geometrie/: Geometres.mtc  GeometresE.mtc
drl-gnn/environment_config/blm/IO/: Interacteur.mtc
drl-gnn/environment_config/blm/lanceur/: Principale.mtc
drl-gnn/environment_config/init_feats/IO/: Parametres.mtc  output.mtc
drl-gnn/graphdrl/: __init__.py
drl-gnn/graphdrl/environment/: cimlib.py  geometry.py  trajectory.py
drl-gnn/graphdrl/postprocess/: plot.py  postresults.py  store_results.py  styles.py
drl-gnn/graphdrl/utils/: file_handling.py  forces.py  meshio_mesh.py  reward.py
drl-gnn/optim_config/: optim_continuous.json  optim_continuous.py  optim_discrete.json  optim_discrete.py  optim_semicontinuous.json  optim_semicontinuous.py  panels.json  panels.py  panels_continuous_minFy.json  panels_continuous_minFy.py
drl-gnn/scripts/: optim.sh  optimGPU.sh  panels.sh  panelsGPU.sh  panelsGPU_minFx.sh  panelsGPU_minFy.sh  panels_continuous_minFy.sh
drl-gnn/tests/: conftest.py  test_file_handling_and_meshio.py  test_geometries.py  test_gnn.py  test_optim.py  test_pbo.py  test_reward.py  test_trajectory_and_cimlib.py
(+35 files in other folders)
